--- a/style/style.css
+++ b/style/style.css
@@ -93,6 +93,7 @@ body {
     & li {
         padding-inline: 20px;
         display: inline-block;
+        
     }
 
 
@@ -125,7 +126,7 @@ body {
     & img {
         position: absolute;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         top: 0;
         z-index: -1;
         
@@ -251,7 +252,6 @@ body {
 }
 
 /* Advertisement Section */
-
 .advert-container {
     background-image: url("../imgs/CTA-bg.png");
     max-width: 100vw;
@@ -261,6 +261,7 @@ body {
     color: white;
     z-index: -1;
     padding-right: 18rem;
+    margin-bottom: 80px;
 
     & .advert-content {
         z-index: 2;
@@ -282,14 +283,61 @@ body {
 }
 
 .advert-content button {
-
-        padding: 16px 48px;
-        outline: none;
-        border: 0;
-        background: var(--clr-btn);
-        color: white;
-        transition: 250ms;
+    padding: 16px 48px;
+    outline: none;
+    border: 0;
+    background: var(--clr-btn);
+    color: white;
+    transition: 250ms;
+    cursor: pointer; 
 }
+
+/* News & Update Section */
+#news-wrapper {
+    max-width: 100vw;
+    padding: 0 18rem 0 18rem;
+    height: 100vh;
+    background: white;
+}
+
+.update {
+    background: red;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
+    gap: 10rem;
+
+    & .subject {
+        background: gray;
+        height: 400px;
+
+        & h1 {
+        font-size: 24px;
+
+        &::after {
+           content:'';
+           background: black;
+           position: absolute;
+           display: block;
+           width: 350px;
+           height: 5px;
+           margin-top: 10px;
+
+        }
+        }
+    }
+}
+
+.subject-1 .success-story {
+    margin-top: 3rem;
+    width: 70%;
+    height: 100%;
+    background: red;
+}
+
+
+
+
 
 
 
