--- a/style/admission.css
+++ b/style/admission.css
@@ -113,94 +113,133 @@ html, body {
         height: 2px;
         transition: 250ms;
     }
-
 }
 
-/* Contact Section */
-.contact-section-container {
-    padding: 18rem 18rem 0 18rem    ;
+/* About Section */
+.admin-container {
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.9), transparent, rgba(0, 0, 0, 0.9)), url("../imgs/admission-bg.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     max-width: 100vw;
-    min-height: 80vh;
-    text-align: center;
+    height: 100vh;
+    padding: 0 18rem 6rem;
+    color: white;
+}
+
+.admin-container .ad-header {
+    font-size: 100px;
+}
+
+/* Details Section */
+.details-container {
+    max-width: 100vw;
+    min-height: 60vh;
+    padding-inline: 18rem;
+    padding-block: 4rem;
+}
+
+.details-container .d-home {
+    opacity: .6;
+}
+
+.d-content {
+    text-align: justify;
 
     & h1 {
-        padding-block: 0 86px;
         font-weight: bold;
         color: var(--clr-primary);
     }
 }
 
-.contact-grid {
+/* Admin Column 3 Section*/
+
+.ad-col3 {
     max-width: 100vw;
-}
-
-.contact-item {
+    padding: 10rem 18rem 10rem 18rem;
+    min-height: 50vh;
+    color: white;
+    background: var(--clr-primary);
     text-align: center;
-
-    & i {
-        font-size: 32px;
-        background: #e7e7e7;
-        color: var(--clr-primary);
-        padding: 18px;
-        border-radius: 100%;
-        
-    }
-
-    & .c-headline {
-        font-size: 24px;
-        color: var(--clr-primary);
-        font-weight: 550;
-    }
+    gap: 8rem;
 }
 
-/* Map Section */
+/* Application Process Section */
 
-.map-holder {
-    padding-inline: 18rem;
+.ad-process-container {
+    max-width: 100vw;
+    min-height: 60vh;
+    padding: 8rem 18rem 5rem 18rem;
+    color: var(--clr-primary);
 }
 
-.mapouter {
-    position:relative;
-    text-align:right;
-    width:100%;
-    height:400px;
+.ad-process-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
+    grid-gap: 10rem 10em;
+    position: relative;
 }
 
-.gmap_canvas {
-    overflow:hidden;
-    background:none!important;
-    width:100%;
-    height:400px;
+.ad-process-grid::after {
+    content: '';
+    background: var(--clr-primary);
+    position: absolute;
+    display: block;
+    height: 5px;
+    width: 100%;
+    bottom: 0;
+    margin: auto;
 }
 
-.gmap_iframe {
-    height:400px!important;
+.ad-item {
+    padding-bottom: 4rem;
 }
 
-/* Contact Form Section */
+.ad-item .num {
+    font-size: 92px;
+}
 
-.c-form-container {
-    padding: 5rem 18rem 0;
+.ad-item .ad-text {
+    font-size: 24px;
+}
+
+/* On site Application Section */
+
+.os-container {
     max-width: 100vw;
     min-height: 100vh;
+    padding: 3rem 18rem 8rem 18rem;
 }
 
-form .c-btn {
-    padding: 16px 32px;
+.os-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
+    gap: 1rem;
+}
+
+.os-grid .os-header {
+    font-weight: bold;
+    color: var(--clr-primary);
+}
+
+.os-grid .os-header-2 {
+    font-weight: bold;
+}
+
+.os-grid-content-2 {
     background: var(--clr-primary);
     color: white;
-    outline: 0;
-    border: none;
-    transition: 300ms;
+    padding: 56px;
 }
 
-form .c-btn:hover {
-    background: var(--clr-3card);
+.os-documents {
+ 
+    & h1 {
+    color: var(--clr-primary);
 }
-
-.c-logo-right {
-    padding: 10rem 0 18rem 18rem;
-    text-align: center;
+    & p {
+        line-height: 1;
+    }
 }
 
 /* Footer Section */
@@ -292,9 +331,3 @@ form .c-btn:hover {
         opacity: 1;
     }
  }
-
-
-
-
-
-
