--- a/style/career.css
+++ b/style/career.css
@@ -115,8 +115,8 @@ html, body {
     }
 }
 
-/* Admin Section */
-.admin-container {
+ /* Career Hero Section */
+.career-container {
     background-image: linear-gradient(to top, rgba(0, 0, 0, 0.9), transparent, rgba(0, 0, 0, 0.9)), url("../imgs/admission-bg.png");
     background-repeat: no-repeat;
     background-position: center;
@@ -127,121 +127,142 @@ html, body {
     color: white;
 }
 
-.admin-container .ad-header {
+.career-container .ca-header {
     font-size: 100px;
     font-weight: bold;
 }
 
-/* Details Section */
-.details-container {
+/* Explore Section */
+.ca-explore-container {
     max-width: 100vw;
-    min-height: 60vh;
-    padding-inline: 18rem;
-    padding-block: 4rem;
+    min-height: 100vh;
+    padding: 4rem 18rem 10rem 18rem;
 }
 
-.details-container .ad-home {
+.ca-home {
     opacity: .6;
 }
 
-.d-content {
-    text-align: justify;
-
-    & h1 {
-        font-weight: bold;
-        color: var(--clr-primary);
-    }
-}
-
-/* Admin Column 3 Section*/
-
-.ad-col3 {
-    max-width: 100vw;
-    padding: 10rem 18rem 10rem 18rem;
-    min-height: 50vh;
-    color: white;
-    background: var(--clr-primary);
-    text-align: center;
-    gap: 8rem;
-}
-
-/* Application Process Section */
-
-.ad-process-container {
-    max-width: 100vw;
-    min-height: 60vh;
-    padding: 8rem 18rem 5rem 18rem;
-    color: var(--clr-primary);
-}
-
-.ad-process-grid {
+.ca-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
-    grid-gap: 10rem 10em;
-    position: relative;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 3fr));
+    gap: 5rem;
+    padding-block: 5rem 0;
 }
 
-.ad-process-grid::after {
+.ca-grid .ca-item {
+    text-align: center;
+    background: white;
+    padding: 3rem;
+    filter: drop-shadow(5px 6px 5px rgba(0, 0, 0, 0.2));
+}
+
+.ca-item a {
+    text-decoration: none;
+    padding: 16px 32px;
+    color: var(--clr-primary);
+    border-radius: 30px;
+    position: relative;
+    overflow: hidden;
+    font-weight: bold;
+
+}
+
+.ca-item a::after {
     content: '';
-    background: var(--clr-primary);
     position: absolute;
     display: block;
-    height: 5px;
+    background: var(--clr-secondary);
+    width: 50px;
+    left: 0;
+    top: 0;
+    height: 100%;
+    border-radius: 30px;
+    z-index: -1;
+    transition: 250ms;
+}
+
+.ca-item a:hover::after {
     width: 100%;
-    bottom: 0;
-    margin: auto;
+}   
+
+.ca-item p {
+    padding-block: 32px;
 }
 
-.ad-item {
-    padding-bottom: 4rem;
-}
-
-.ad-item .num {
-    font-size: 92px;
-}
-
-.ad-item .ad-text {
-    font-size: 24px;
-}
-
-/* On site Application Section */
-
-.os-container {
-    max-width: 100vw;
-    min-height: 100vh;
-    padding: 3rem 18rem 8rem 18rem;
-}
-
-.os-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
-    gap: 1rem;
-}
-
-.os-grid .os-header {
-    font-weight: bold;
+.ca-item h2 {
     color: var(--clr-primary);
 }
 
-.os-grid .os-header-2 {
-    font-weight: bold;
-}
+.ca-explore-header{
 
-.os-grid-content-2 {
-    background: var(--clr-primary);
-    color: white;
-    padding: 56px;
-}
-
-.os-documents {
- 
-    & h1 {
+ & h1 {
+    font-size: 56px;
     color: var(--clr-primary);
-}
-    & p {
-        line-height: 1;
+    font-weight: 600;
     }
+& p {
+    max-width:700px;    
 }
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Footer Section */
 .footer-container {
