--- a/style/style.css
+++ b/style/style.css
@@ -158,18 +158,19 @@ html, body {
 
 #nav-bar-btm::before {
     content: '';
-    height: 1px;
+    height: .5px;
     background: white;
     position: absolute;
     display: block;
     inset: 0 18rem 0 18rem;
+    opacity: .5
     
 }
 
 /* Hero Section */
 .hero-section {
     max-width: 100vw;
-    height: 90vh;
+    height: 100vh;
 
     & img {
         position: absolute;
