--- a/style/contact.css
+++ b/style/contact.css
@@ -28,19 +28,58 @@ html, body {
 }
 
 /* Navigation Section */
-.navbar-container {
+#nav-container {
     position: fixed;
-    z-index: 99999 !important;
-    filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.8));
+    transition: 300ms;
+    z-index: 999999 !important;
+    max-width: 100vw;
+    background: var(--clr-primary);
+    filter: drop-shadow(0px 0 5px rgba(0, 0, 0, 0.6));
+
+}
+
+.nav-colored {
+    background-color: var(--clr-primary);
+    filter: drop-shadow(6px 1px 10px rgba(0, 0, 0, 0.6));
+}
+
+.nav-transparent {
+    background-color:transparent;
 }
 
 #nav-bar-top {
     padding: 1rem 18rem 1rem 18rem;
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: space-between;
     flex-wrap: wrap;
-    background-color: var(--clr-primary-deep);
+}
+
+.side-nav-left {
+    font-size: 15px;
+
+    & a {
+        color: white;
+        text-decoration: none;
+        padding-right: 3rem;
+        position: relative;
+    }
+
+    & a:after {
+        content: '';
+        background: white;
+        width: 0;
+        height: 2px;
+        display: block;
+        position: absolute;
+        left: 0;
+        transition: 300ms;
+
+    }
+
+    & a:hover::after {
+        width: 50%;
+    }
 }
 
 .side-nav-right {
@@ -59,7 +98,7 @@ html, body {
 
 /* Navigation bottom */
 #nav-bar-btm {
-    background: var(--clr-primary);
+    background: transparent;
     color: white;
     display: flex;
     align-items: center;
@@ -113,7 +152,20 @@ html, body {
         height: 2px;
         transition: 250ms;
     }
+}
 
+#nav-bar-btm::before {
+    content: '';
+    height: .5px;
+    background: white;
+    position: absolute;
+    display: block;
+    inset: 0 18rem 0 18rem;
+    opacity: .5 
+}
+
+#nav-bar-btm .main-logo {
+    cursor: pointer;
 }
 
 /* Contact Section */
