--- a/style/news.css
+++ b/style/news.css
@@ -14,7 +14,6 @@
     --clr-2card: #213673;
     --clr-3card: #3653A5;
     
-
     --clr-btn: #263F85;
 
     /* Font style */
@@ -27,55 +26,50 @@ html, body {
     font-family: var(--font-universal);
 }
 
-
-
-.card
-{
-    border: none;
-}
-
-h1{
-    color: #00113F;
-}
-
-.events-container
-{
-    background: #f7f7f7;
+/* All News Section */
+.alln-section {
     max-width: 100vw;
-    padding-inline: 18rem;
+    padding: 18rem 18rem 4rem;
+
+    & h1 {
+        color: var(--clr-primary);
+        font-weight: bold;
+    }
+    
 }
 
-.btn-primary{
-    background-color: #00113F;
-    border: 1px solid #00113F;
+.news-item  {
+    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+    padding-bottom: 2rem;
+    margin-block: 5rem;
+
+    & a {
+        text-decoration: none;
+        color: var(--clr-primary);
+    }
 }
 
-.bg-cyan
-{
-    background-color: aquamarine;
+.n-item-date i {
+    color: var(--clr-primary);
 }
 
-.events-heading
-{
-    font-weight: 600;
-    color: #00113F;
+.img-item {
+    max-width: 100vw;
 }
 
+.img-item img {
+    width: 100%;
+    margin-bottom: 3rem;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.n-header {
+    color: var(--clr-primary);
+    
+    & h1 {
+        font-weight: bold;
+        margin-block: 20px;
+    }
+}
 
 /* Footer Section */
 .footer-container {
