--- a/style/style.css
+++ b/style/style.css
@@ -36,12 +36,11 @@ html, body {
     transition: 300ms;
     z-index: 999999 !important;
     max-width: 100vw;
-
 }
 
 .nav-colored {
     background-color: var(--clr-primary);
-    filter: drop-shadow(6px 1px 10px rgba(0, 0, 0, 0.6));
+    filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.6));
 }
 
 .nav-transparent {
@@ -84,7 +83,7 @@ html, body {
 }
 
 .side-nav-right {
-    font-size: 16px;
+    font-size: 15px;
 
     & span {
         margin-right: 16px;
@@ -163,8 +162,11 @@ html, body {
     position: absolute;
     display: block;
     inset: 0 18rem 0 18rem;
-    opacity: .5
-    
+    opacity: .5 
+}
+
+#nav-bar-btm .main-logo {
+    cursor: pointer;
 }
 
 /* Hero Section */
@@ -303,6 +305,7 @@ html, body {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 3fr));
     gap: 7rem;
+    padding-bottom: 3rem;
 }
 
 .column h2 {
@@ -388,13 +391,13 @@ html, body {
 
         &::after {
            content:'';
-           background: black;
+           background: var(--clr-primary);
+           opacity: .7;
            position: absolute;
            display: block;
            width: 350px;
-           height: 3px;
+           height: 2px;
            margin-top: 10px;
-
         }}
     }
 }
@@ -507,11 +510,12 @@ html, body {
 
  .events-header::after {
     content: '';
-    background: black;
+    background: var(--clr-primary);
     position: absolute;
     display: block;
     width: 70%;
-    height: 4px;
+    height: 2px;
+    opacity: .5;
  }
 
  .events-grid {
@@ -681,7 +685,7 @@ html, body {
     max-width: 100vw;
     min-height: 539px;
     background: var(--clr-primary);
-    padding-inline: 18rem;
+    /* padding-inline: 18rem; */
     padding-block: 60px 0;
     color: white;
  }
@@ -765,6 +769,59 @@ html, body {
         opacity: 1;
     }
  }
+
+ /* Mobile Layout */
+
+ @media (max-width: 1650px) {
+
+/* Navigation Top */
+    #nav-bar-top {
+        padding-inline: 12rem;
+    }
+
+    .side-nav-left {
+        font-size: 12px;
+    }
+
+/* Navigation bottom */
+    
+    #nav-bar-btm {
+        padding-inline: 12rem;
+    }
+
+    #nav-bar-btm::before {
+        content: '';
+        height: .5px;
+        background: white;
+        position: absolute;
+        display: block;
+        inset: 0 12rem 0 12rem;
+        opacity: .5;
+    }
+
+/* Hero Section */
+.hero-section h1 {
+    padding-inline: 12rem;
+}
+
+.hero-section p {
+    padding-inline: 12rem;
+}
+
+/* 3 Cards column Section */
+.cards-container {
+    padding-inline: 12rem;
+}
+
+/* VocTech Academy Has */
+
+.column-grid {
+    gap: 2rem;
+}
+
+ }
+
+
  
 
 
