--- a/style/style.css
+++ b/style/style.css
@@ -178,6 +178,10 @@ html, body {
     cursor: pointer;
 }
 
+/* #nav-bar-btm .main-logo img {
+    width: 70px;
+} */
+
 /* Hero Section */
 .hero-section {
     max-width: 100vw;
@@ -190,7 +194,6 @@ html, body {
         height: 100%;
         top: 0;
         z-index: -1;
-        
     }
     
     & h1 {
@@ -199,7 +202,7 @@ html, body {
         font-size: 64px;
         opacity: .9;
 
-        &:after {
+        &::after {
             content: '';
             width: 138px;
             height: 5px;;
@@ -240,9 +243,6 @@ html, body {
 .cards-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 3fr));
-    /* display: flex;
-    flex-wrap: wrap;
-    max-width: 100%; */
     
      & .card {
         background: var(--clr-1card);
@@ -282,7 +282,7 @@ html, body {
             padding-block: 0 20px;
         }
      }
-
+ 
      & .card-holder-2 {
         background: var(--clr-2card);
      }
@@ -349,15 +349,19 @@ html, body {
     background-size: cover;
     position: relative;
     color: white;
-    padding-right: 18rem;
+    padding-inline: 18rem;
     margin-bottom: 80px;
 } 
+
+.advert-container {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
 
 .advert-container .advert {
     z-index: 2;
     max-width: 600px;
-    position: absolute;
-    inset: 30% 0 0 50%;
 } 
 
 .advert-container::after {
@@ -367,6 +371,7 @@ html, body {
     position: absolute;
     height: 100%;
     top: 0;
+    right: 0;
     z-index: 1;
 } 
 
@@ -450,6 +455,10 @@ html, body {
     text-decoration: none;
     color: var(--clr-1card);
     font-weight: 550;
+}
+
+.next-page a:hover {
+    color: var(--clr-2card);
 }
 
 /* 4 Column Section */
@@ -675,7 +684,6 @@ html, body {
 
  .cta-content {
     position: relative;
-    text-align: justify;
 
     & a {
         background: var(--clr-primary);
@@ -726,21 +734,21 @@ html, body {
     }
 
     & p {
-    padding-block: 0 48px;
+    padding-block: 0 20px;
  }
  }
 
  .footer-item {
 
     & h1 {
-    font-size: 24px;
+    font-size: 18px;
     padding-block: 0 20px;
     
     }
 
     & p {
         opacity: .8;
-        padding-block: 0 18px;
+        padding-block: 0 0px;
     }
 
     & a {
@@ -798,64 +806,200 @@ html, body {
 
 
 
+ /* Desktop Layout ------------------------------------------ */
+ @media screen and (min-width: 1024px) and (max-width: 1650px) {
+
+/* Navigation Desktop Layout */
+
+#nav-bar-top {
+    padding-inline: 8rem;
+}
+
+.side-nav-left {
+    font-size: 12px;
+}
+
+.side-nav-left a {
+    padding-right: 1.5rem;
+}
+
+.side-nav-right {
+    font-size: 12px;
+}
+
+.side-nav-right a {
+    padding-left: 1.5rem;
+}
+
+#nav-bar-btm {
+    padding-inline: 8rem;
+}
+
+#nav-bar-btm h1 {
+    font-size: 24px;
+}
+
+#nav-bar-btm li {
+    padding-inline: 10px;
+}
+
+#nav-bar-btm a {
+    font-size: 14px;
+}
+
+#nav-bar-btm::before {
+    inset: 0 8rem 0 8rem;
+}
 
 
+/* Hero Desktop Layout */
 
-
- /* Mobile Layout */
-
- @media screen and (min-width: 1024px) {
-
-/* Navigation Top
-  
-    .side-nav-left {
-        font-size: 12px;
-    }
-
-/* Navigation bottom */
-    
-    /* #nav-bar-btm {
-        padding-inline: 12rem;
-    }
-
-    #nav-bar-btm::before {
-        content: '';
-        height: .5px;
-        background: white;
-        position: absolute;
-        display: block;
-        inset: 0 12rem 0 12rem;
-        opacity: .5;
-    }
-
-/* Hero Section */
-/* .hero-section h1 {
-    padding-inline: 12rem;
+.hero-section h1 {
+    padding-inline: 8rem;
 }
 
 .hero-section p {
-    padding-inline: 12rem;
+    padding-inline: 8rem;
+    width: 80%;
 }
 
-/* 3 Cards column Section */
-/* .cards-container {
-    padding-inline: 12rem;
+/* Cards Column Desktop Layout */
+
+.cards-container {
+    padding-inline: 8rem;
 }
 
-/* VocTech Academy Has */
+.cards-grid {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 3fr));
+}
 
-/* .column-grid {
+.cards-grid .card p{
+    padding-inline: 10px;
+}
+
+/* VocTech Has Desktop Section */
+
+.column-grid {
+    grid-template-columns: repeat(auto-fit, minmax(100px, 3fr));
+    gap: 1rem;
+}
+
+.column h2 {
+    font-size: 24px;
+}
+
+/* News & Update Desktop Layout */
+
+#news-container {
+    padding-inline: 8rem;
+    height: 140vh;
+}
+
+.update-grid {
     gap: 2rem;
 }
 
-/* News & Update Section */
-    /* #news-container {
-        padding-inline: 12rem;
-    }  */
+.subject-1 .success-story {
+    max-width: 100%;
+}
+
+.news-pack .news-content :nth-child(1) {
+    font-size: 10px;
+}
+
+.news-pack {
+    margin-bottom: unset;
+}
+
+.news-pack img {
+    width: 160px;
+}
+
+.news-pack .headline {
+    font-size: 13px;
+}
+
+/* 4 Column Desktop Layout */
+.column-container {
+    all: unset;
+    color: white;
+    display: flex;
+    flex-grow: 1;
+    text-align: center;
+}
+
+/* Events Desktop Layout */
+.events-container {
+    padding-inline: 8rem;
+}
+
+.events-grid {
+    all: unset;
+    display: flex;
+    gap: 1rem;
+    margin-block: 60px;
+}
+
+.e-content .e-date h1 {
+    font-size: 32px;
+}
+
+.e-headline h3 {
+    font-size: 20px;
+}
+
+/* CTA Desktop Layout */
+
+.cta-container {
+    gap: 2rem;
+}
+
+.cta-wrapper-2 {
+    padding: 100px 2rem;
+    max-width: 575px;
+}
+
+.cta-btn a {
+    font-size: 16px;
+    padding: 16px 32px;
+}
+
+/* Footer Desktop Layout */
+
+.footer-container {
+    padding-inline: 8rem;
+}
+
+.footer-item-first div h1 {
+    font-size: 20px;
+}
+
+.footer-item-first p {
+    font-size: 14px;
+}
+
+.footer-grid {
+    gap: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 3fr));
+}
+
+.footer-item .f-item-text p a  {
+    font-size: 14px !important;
+}
+
+.l-footer p{
+    padding-right: 1.5rem;
+    font-size: 12px;
+}
+
+.f-copyright {
+    font-size: 12px;
+}
+
  }
+ 
 
- /* Tablet Layout */
-
+ /* Tablet Layout----------------------- */
  @media screen and (min-width: 768px) and (max-width: 1023px) {
 
 /* Navigation Section */
@@ -883,6 +1027,10 @@ html, body {
 
     #nav-bar-btm {
         padding-inline: 1rem;
+    }
+
+    #nav-bar-btm h1 {
+        font-size: 24px;
     }
 
     #nav-bar-btm a {
@@ -913,18 +1061,132 @@ html, body {
         padding-inline: 1rem;
     }
 
-    /* Advertisement Section */
+    /* Advertisement Tablet Layout */
+
+    .advert-container {
+        padding-inline: 1rem;
+        margin-bottom: 0;
+    }
+    
+    .advert-container .advert {
+        margin: auto;
+    }
+
+    /* News & Update Tablet Layout */
+
+    #news-container {
+        padding-inline: 1rem;
+        height: 210vh;
+    }
+
+    .subject-2 {
+        margin-top: 5rem;        
+    }
+
+    .subject-1 .success-story {
+        max-width: 100%;
+    }
+
+    /* Events Tablet Layout */
+
+    .events-container {
+        padding-inline: 1rem;
+    }
+
+    /* CTA Tablet Layout */
+
+    .cta-container {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 1rem;
+    }
+    
+    .cta-wrapper-1 {
+        padding: 2rem;
+    }
+    
+    .cta-wrapper-1 h1 {
+        font-size: 36px;  
+    }
+    
+    .cta-wrapper-1 div a {
+        font-size: 16px;
+    } 
+    
+    .cta-wrapper-2 {
+        padding: 1rem;
+        min-height: 60vh;
+    }
+    
+    .cta-wrapper-2 .cta-heading h1 {
+        font-size: 36px;
+    }
+    
+    .cta-wrapper-2 .cta-heading p {
+        font-size: 24px;
+    }
+    
+    .cta-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .cta-btn a {
+        font-size: 16px;
+    }
+
+    /* Footer Tablet Layout */
+    
+    .footer-container {
+        padding-inline: 1rem;
+    }
+    
+    .footer-grid {
+       gap: 1rem;
+       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
+    }
+    
+    .footer-1 h1 {
+        padding-block: 0 10px;
+    }
+    
+    .footer-1 p {
+        padding-block: 0;
+    }
+    
+    .footer-item h1 {
+        padding-block: 0 10px;
+        font-size: 18px;
+    }
+    
+    .footer-item p {
+        padding-block: 0;
+    }
+    
+    .f-head-wrapper h1 {
+        display: flex;
+        align-items: center;
+        width: 100vw;
+    }
+    
+    .footer-item {
+        align-items: start !important;
+        overflow: hidden;
+    }
+    
+    .footer-5 {
+        flex-wrap: wrap;
+        text-align: center;
+        justify-content: center;
+    }
+
  }
 
 
-
-
-
-/* Mobile Layout */
+/* Mobile Layout ------------------------------- */
 @media  screen and (max-width: 767px) {
 
 /* Navigation Mobile Layout */
-  
     #nav-bar-top {
         padding-inline: 1rem;
         flex-direction: column;
@@ -989,11 +1251,20 @@ html, body {
         text-align: center;    
     }
 
+    #nav-bar-btm {
+        border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    }
+
+    #nav-bar-btm .vocTech-logo {
+        position: relative;
+        left: 1rem;
+    }
+
     #nav-bar-btm .menu-icon {
         display: block;
         position: absolute;
         font-size: 2rem;
-        right: 2rem;
+        right: 1rem;
         bottom: 1.7rem;
     }
 
@@ -1012,19 +1283,28 @@ html, body {
         padding-inline: 1rem;
     }
 
-    #nav-bar-btm::before {
-        inset: 0 1rem 0 1rem;
-    }
 
 /* Hero Mobile Layout */ 
+
 .hero-section h1 {
     padding-inline: 1rem;
     font-size: 38px;
+    text-align: center;
+}
+
+.hero-section h1::after {
+    inset: 0;
+    margin: auto;
+    margin-top: 2rem;
 }
 
 .hero-section p {
     padding-inline: 1rem;
     max-width: 100vw;
+    text-align: center;
+    width: 80%;
+    font-size: 20px;
+    margin: 0 auto;
 }
 
 /* Cards Mobile Layout */ 
@@ -1039,19 +1319,18 @@ html, body {
 
 /* Advertisement Mobile Layout */
 .advert-container {
-    padding-right: 1rem;
+    padding-inline: 1rem;
     margin-bottom: 0;
 }
 
 .advert-container .advert {
-    inset: 10% 0 0 0;
     margin: auto;
-    padding-inline: 1rem;
 }
 
 /* News & Update Mobile Layout */
 #news-container {
-    padding-inline: 1rem;
+    padding-inline: .5rem;
+    height: 210vh;
 }
 
 .subject-1 .success-story {
@@ -1070,6 +1349,18 @@ html, body {
     margin-inline: 1rem;
 }
 
+.next-page {
+    text-align: center;
+    padding: 2rem;
+    
+}
+
+.next-page a {
+    background: var(--clr-primary);
+    color: white;
+    padding: 1rem 1.5rem;
+}
+
 /* Events Mobile Layout */
 
 .events-container {
@@ -1078,6 +1369,10 @@ html, body {
 
 .e-content .e-date h1 {
     font-size: 3em;
+}
+
+.more-events-link a {
+    text-align: center;
 }
 
 /* CTA Mobile Layout */
@@ -1112,6 +1407,16 @@ html, body {
     font-size: 24px;
 }
 
+.cta-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cta-btn a {
+    font-size: 16px;
+}
+
 /* footer Mobile Section */
 
 .footer-container {
@@ -1132,7 +1437,8 @@ html, body {
 }
 
 .footer-item h1 {
-    padding-block: 0 10px
+    padding-block: 0 10px;
+    font-size: 18px;
 }
 
 .footer-item p {
@@ -1155,10 +1461,10 @@ html, body {
     text-align: center;
     justify-content: center;
 }
+
 }
 
 /* Mobile Layout 600px Breakpoint */
-
 @media screen and (max-width: 600px) {
 
     .footer-container {
@@ -1174,9 +1480,13 @@ html, body {
         text-align: center;
     }
 
+    .footer-item h1 {
+        font-size: 16px !important;
+    }
+
     .footer-item .f-head-wrapper #chevron1 {
         display: block;
-        font-size: 20px;
+        font-size: 18px;
         position: relative;
         right: 2rem;
         transition: 250ms; 
@@ -1184,7 +1494,7 @@ html, body {
 
     .footer-item .f-head-wrapper #chevron2 {
         display: block;
-        font-size: 20px;
+        font-size: 18px;
         position: relative;
         right: 2rem;
         transition: 250ms; 
@@ -1192,7 +1502,7 @@ html, body {
 
     .footer-item .f-head-wrapper #chevron3 {
         display: block;
-        font-size: 20px;
+        font-size: 18px;
         position: relative;
         right: 2rem;
         transition: 250ms; 
@@ -1246,6 +1556,13 @@ html, body {
     .f-item-text {
         display: none;
     }
+
+    /* Advertisement Mobile Layout */
+    .cta-wrapper-2 {
+        padding: 1rem;
+        min-height: 70vh;
+    }
+
 }
 
 @media screen and (max-width: 530px) {
@@ -1256,14 +1573,37 @@ html, body {
         width: 450px;
     }
 
-    /* Advertisement Mobile Layout */
+/* Advertisement Mobile Layout */
     .cta-wrapper-2 {
         padding: 1rem;
         min-height: 80vh;
     }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 460px) {
+
+    #news-container {
+        padding-inline: .5rem;
+        height: 230vh;
+    }
+}
+
+@media screen and (max-width: 400px) {
+
+    /* News & Update Mobile Section */
+
+    #news-container {
+        height: 220vh;
+        padding: .5rem;
+    }
+
+    .news-pack .headline {
+        font-size: 13px;
+    }
+
+    #news-container .news-content p {
+        font-size: 12px;
+    }
 
 }
     
